rename api for clusters
